nice fixes to vertically align

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,11 @@
 html {
+    height:100%;
+    box-sizing:border-box;
     background: #000;
     font-family: Helvetica, Arial, sans-serif;
     color: white;
-}
-body {
-    height:100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
+    border: 10px solid white;
 }
 img {
     display: inline-block;
@@ -20,7 +18,11 @@ a {
     color: white;
 }
 .container {
-    align-items: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 .fancy {
     font-weight: bold;
